// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakUp state: {"stage":"通常"} 1`] = `
Object {
  "stage": "別れた",
}
`;

exports[`breakUp state: undefined 1`] = `
Object {
  "stage": "別れた",
}
`;

exports[`neglect state: {"stage":"通常"} 1`] = `
Object {
  "stage": "しんだ",
}
`;

exports[`neglect state: undefined 1`] = `
Object {
  "stage": "しんだ",
}
`;
